fix: Modify CSS related to breaking when characters are stretched

--- a/css/index.css
+++ b/css/index.css
@@ -27,6 +27,7 @@ main > h1 {
   font-size: 6.4rem;
   margin-top: 120px;
   text-align: center;
+  cursor: default;
 }
 
 /* 메인-cal */
@@ -49,6 +50,7 @@ main > h1 {
   display: flex;
   flex-direction: column;
   gap: 15px;
+  cursor: default;
 }
 .view__field {
   border: 2px solid var(--stroke);
@@ -57,6 +59,8 @@ main > h1 {
   font-size: 5rem;
   padding: 30px;
   border-radius: 15px;
+  word-break: break-all;
+  line-height: 5rem;
 }
 .view__result {
   border: 2px solid var(--stroke);
